[GTK] MOUSE_CURSOR_SCALE is not implemented https://bugs.webkit.org/show_bug.cgi?id=109469

Reviewed by Darin Adler.

.:

Enable MOUSE_CURSOR_SCALE for the GTK port.

* Source/cmake/OptionsGTK.cmake:

Source/WebCore:

Use gdk_cursor_new_from_surface() instead of gdk_cursor_new_from_pixbuf() to avoid the surface to pixbuf
conversion.

* platform/gtk/CursorGtk.cpp:
(WebCore::createCustomCursor):

Canonical link: https://commits.webkit.org/213780@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247560 268f45cc-cd09-0410-ab3c-d52691b4dbfc